# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
#

2005-11-19 17:37:49 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-39

    Summary:
      csv, fix "to_str" when there is not an schema
    Revision:
      itools--main--0.12--patch-39

    By default (when there is not an schema) we deserialize columns as
    unicode values. Then we must encode the values on serialization.

    modified files:
     Changelog csv/itools_csv.py


2005-11-19 17:25:50 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-38

    Summary:
      web, forgot to log some errors; cms, fix "internal_server_error"
    Revision:
      itools--main--0.12--patch-38


    modified files:
     Changelog cms/Root.py web/server.py


2005-11-19 17:10:16 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-37

    Summary:
      scripts.icms, index and archive everything on initialization
    Revision:
      itools--main--0.12--patch-37


    modified files:
     Changelog scripts/icms.py


2005-11-19 09:35:21 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-36

    Summary:
      merge logout page from herve (#164)
    Revision:
      itools--main--0.12--patch-36

    Patches applied:
    
     * herve@oursours.net--public/itools--aruni--0.12--patch-24
       provide a logout page.
    

    new files:
     cms/ui/.arch-ids/WebSite_logout.xml.en.id
     cms/ui/WebSite_logout.xml.en

    modified files:
     Changelog cms/WebSite.py

    new patches:
     herve@oursours.net--public/itools--aruni--0.12--patch-24


2005-11-19 09:30:14 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-35

    Summary:
      cms, register the root handler class too
    Revision:
      itools--main--0.12--patch-35


    modified files:
     Changelog cms/Root.py


2005-11-18 23:31:28 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-34

    Summary:
      fix FSF address (#180)
    Revision:
      itools--main--0.12--patch-34


    modified files: